docker-k8s-lab/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: docker-k8s-lab
  labels:
    name: docker-k8s-lab
