docker-k8s-lab/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-app-service
  namespace: docker-k8s-lab
spec:
  selector:
    app: counter-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
